# haptix-comm

./: CMakeLists.txt  INSTALL_WIN32.md  README.md  configure.bat  haptix-comm.props  haptix_comm.props  make_sdk.bat  make_sdk_from_built_tree.bat  make_sdk_from_built_tree_release.bat  windows_packager.bat
cmake/: BuildMex.cmake  DefaultCFlags.cmake  FindMex.cmake  FindOctaveOctFile.cmake  SearchForStuff.cmake  TestUtils.cmake  config.hh.in  haptix-config.cmake.in  upload_doc.sh.in
doc/: CMakeLists.txt  haptix.in  header.html  hx_close.html  hx_connect.html  hx_read_sensors.html  hx_robot_info.html  hx_update.html  mainpage.dox  mainpage.html
example/: CMakeLists.txt  commands.yaml  compare.cc  configure.bat  grasps.yaml  hx_benchmark.cc  hx_benchmark2.cc  hx_canbus_receive.cc  hx_canbus_send.cc  hx_controller.c  hx_fake_arm.cc  hx_joint_stress.c  hx_joints_stress.c  hx_luke_test.cc  hx_matlab_controller.m  hx_requester.c  hx_responser.cc  hx_sensor.c  hxs_requester.c  keyboard_teleop.cc  korg_finger_teleop.cc  korg_teleop.cc  korg_teleop_amidi.cc  lightweightserial.h  packetClient.cc  requester.c  requester_c.c  responser.c  responser.cc  sinusoidal.cc  step_response.cc  validationController.cc  validationController.hh
example/msg/: CMakeLists.txt  hxCommand.proto
example/sliders/: sliders.cpp  sliders_amidi.cpp  sliders_amidi.h
include/: CMakeLists.txt
include/haptix/comm/: Api.h  AplControl.pb.h  AplControlInterface.h  Arm.pb.h  CMakeLists.txt  Comm.h  Helpers.h  TestMsg.pb.h  comm.h  comm_sim.h  haptix.h  haptix_sim.h  haptix_sim_utils.h  helpers.h  types.h  types_sim.h
matlab/: CMakeLists.txt  hx_benchmark.m  hx_close.c  hx_close.m  hx_connect.m  hx_getdeviceinfo.c  hx_luke_test.m  hx_matlab_controller.m  hx_read_sensors.m  hx_robot_info.c  hx_robot_info.m  hx_update.c  hx_update.m  hxgz.c  hxs_add_constraint.m  hxs_add_model.m  hxs_angular_velocity.m  hxs_apply_force.m  hxs_apply_torque.m  hxs_apply_wrench.m  hxs_camera_transform.m  hxs_contacts.m  hxs_example.m  hxs_force.m  hxs_is_logging.m  hxs_linear_velocity.m  hxs_model_collide_mode.m  hxs_model_color.m  hxs_model_gravity_mode.m  hxs_model_joint_state.m  hxs_model_transform.m  hxs_remove_constraint.m  hxs_remove_model.m  hxs_reset.m  hxs_reset_timer.m  hxs_set_angular_velocity.m  hxs_set_camera_transform.m  hxs_set_linear_velocity.m  hxs_set_model_collide_mode.m  hxs_set_model_color.m  (+14 more)
msg/: AplControl.proto  CMakeLists.txt  hxCamera.proto  hxCollideMode.proto  hxCollisionMode.proto  hxColor.proto  hxCommand.proto  hxContact.proto  hxContactPoint.proto  hxContactPoint_V.proto  hxContact_V.proto  hxDevice.proto  hxEmpty.proto  hxEuler.proto  hxGrasp.proto  hxInt.proto  hxJacobian.proto  hxJoint.proto  hxLink.proto  hxModel.proto  hxParam.proto  hxQuaternion.proto  hxRobot.proto  hxSensor.proto  hxSimInfo.proto  hxString.proto  hxTime.proto  hxTransform.proto  hxVector3.proto  hxWrench.proto
msg/generator/: HaptixGenerator.cc  HaptixGenerator.hh  haptix_generator.cc
octave/: CMakeLists.txt
src/: AplControl.pb.cc  AplControl.proto  Arm.pb.cc  Arm.proto  CMakeLists.txt  Comm.cc  Comm_TEST.cc  comm.cc  comm_TEST.cc  comm_sim.cc  haptix.cc  haptix_TEST.cc  haptix_sim.cc  haptix_sim_TEST.cc
teleop/: CMakeLists.txt  keyboard_teleop.cc  korg_teleop.cc  teleop.h
teleop/config/: arm_mappings.yaml  commands.yaml  grasps.yaml  motor_indices.yaml  slider_mappings.yaml  view_mappings.yaml
teleop/sliders/: sliders.cpp  sliders.h
test/: test_config.h.in
test/integration/: CMakeLists.txt  hx_responser.cc  twoProcesses.cc  twoProcessesSimAPI.cc
tools/: CMakeLists.txt  code_check.sh  hx_responser.cc
